# ShadowBench

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATAFLOW.md  GOVERNANCE.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  hardware_report.yml
.github/workflows/: accuracy.yml  ci.yml  publish.yml  release.yml  validate-catalog.yml
core/: README.md  pyproject.toml
core/src/shadowbench/: __init__.py  __main__.py  _catalog_data.py  cli.py
core/src/shadowbench/calibration/: __init__.py  harness.py  report.py  sync.py
core/src/shadowbench/common/: __init__.py  config.py  errors.py  logging.py  types.py
core/src/shadowbench/ipc/: __init__.py  server.py
core/src/shadowbench/orchestrator/: __init__.py  downloader.py  runner.py
core/src/shadowbench/pool/: __init__.py  discovery.py  proxy.py  router.py  security.py  transport.py
core/src/shadowbench/predictor/: __init__.py  catalog.py  config_coach.py  dense.py  discovery.py  memory.py  models.py  moe.py  validate_catalog.py
core/src/shadowbench/profiler/: __init__.py  bandwidth.py  detect.py  gguf.py  models.py  system.py
core/src/shadowbench/profiler/gpu/: __init__.py  amd.py  apple.py  base.py  cpu.py  intel.py  nvidia.py
core/src/shadowbench/storage/: __init__.py  db.py  schema.sql
core/tests/: conftest.py
core/tests/unit/: test_amd.py  test_calibration_report.py  test_cli.py  test_config.py  test_discovery.py  test_gguf_reader.py  test_intel.py  test_memory.py  test_pool_security.py  test_privacy.py  test_runtime_flags.py  test_throughput.py  test_validate_catalog.py
datasets/: README.md  golden.jsonl  models_catalog.json
docs/: index.md  mkdocs.yml
docs/docs/: index.md
docs/plan/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  MILESTONES.md  ROADMAP.md
frontend/: README.md
schemas/ipc/: ipc.schema.json
scripts/: bootstrap.sh
