[project]
name = "shadowbench"
version = "0.0.1"
description = "Crowd-sourced, peer-to-peer benchmarking and local inference pooling for open-source AI models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "The ShadowBench Authors" }]
keywords = ["llm", "benchmark", "inference", "gguf", "llama.cpp", "p2p"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Base install stays light: profiling + prediction math + CLI.
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "psutil>=5.9",
    "numpy>=1.26",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
# NVIDIA GPU detection.
nvidia = ["nvidia-ml-py>=12.535"]
# Shadow Pool P2P stack (Phase 4).
pool = [
    "zeroconf>=0.132",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "websockets>=12.0",
    "cryptography>=42.0",
]
# GGUF header parsing helper.
gguf = ["gguf>=0.9"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "types-psutil",
    "mkdocs-material>=9.5",
]

[project.scripts]
shadowbench = "shadowbench.cli:app"

[project.urls]
Homepage = "https://github.com/OWNER/ShadowBench"
Documentation = "https://github.com/OWNER/ShadowBench/tree/main/docs"
Repository = "https://github.com/OWNER/ShadowBench"
Issues = "https://github.com/OWNER/ShadowBench/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shadowbench"]
include = ["src/shadowbench/storage/schema.sql"]

# ── Tooling ──────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",    # ruff-format owns code line length; don't nag on long docstrings/URLs
    "RUF002",  # en dash / § used intentionally in doc-style docstrings
    "RUF003",  # same, in comments
    "UP042",   # keep `class X(str, Enum)` for explicit .value serialization semantics
    "B008",    # Typer/FastAPI intentionally call Option()/Depends() in defaults
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["shadowbench"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Optional/hardware deps without stubs — don't fail typecheck on missing imports.
module = ["pynvml.*", "zeroconf.*", "gguf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
markers = [
    "hardware: tests that require real GPU/CPU hardware access",
    "integration: end-to-end tests spanning modules",
]

[tool.coverage.run]
source = ["shadowbench"]
branch = true

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
